[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "mishita-chauhan",email = "mishitachauhan2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
black = "^25.1.0"
mypy = "^1.15.0"

